--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
